--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>segunda subida de las dos del formulario</p>
     <p>primera subida en la rama login</p>
     <p>segunda subida en la rama login</p>
+    <p>defecto arreglado</p>
 </body>
 </html>
